# mbot_semantic_mapping

./: CMakeLists.txt  README.md  package.xml  setup.py
ros/config/: mbot_semantic_mapping.yaml
ros/launch/: aux_mbot_semantic_mapping.launch  mbot_semantic_mapping.launch
ros/scripts/: mbot_semantic_mapping_node
ros/src/mbot_semantic_mapping_ros/: __init__.py  mbot_semantic_mapping.py
